# todoapp_graphql

./: .env  .env.test  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  mprocs.yaml  onboarding_tasks.md
.cargo/: config.toml
.github/workflows/: ci.yml
backend/: .env.test  .gitignore  Cargo.toml  Makefile  README.md
backend/.cargo/: config.toml
backend/cli/: Cargo.toml
backend/config/src/: lib.rs
backend/db/.sqlx/: query-11f3c9fd668e4b34beb1c8b9ec83fe2a6bf6ff65f87d56d4285cdc6ea3bbc46c.json
backend/db_queries/: Cargo.toml
backend/macros/: README.md
backend/macros/src/: lib.rs
backend/tests/02_graphql/: 01_create_todo.hurl  03_update_todo.hurl
backend/web/src/: routes.rs
cli/: Cargo.toml  README.md
cli/src/: lib.rs
config/: Cargo.toml  README.md
db/: Cargo.toml  clorinde.toml
db/.sqlx/: query-1321d4bc312af400316d21ed9153381156c7429e7b827b014da87ed328a7b52c.json  query-1fb3935142cd98049f2a9108688081877df2593f4411ff5d81dc18890bc8d7ce.json
db/atlas/: schema.sql
db/migrations/: 1775573891__todo.sql  V2__add_tags_todo.sql  atlas.sum
db/queries/: todos.sql
db/src/: lib.rs
db/src/entities/: todos.rs
db/src/test_helpers/: mod.rs  todos.rs
db_queries/src/: queries.rs
db_queries/src/queries/: todos.rs
frontend/: .env.example  package.json
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/components/: sign-out-dialog.tsx
frontend/src/features/auth/api/: auth.ts
frontend/src/features/auth/sign-in/components/: user-auth-form.tsx
frontend/src/features/auth/sign-up/components/: sign-up-form.tsx
frontend/src/features/todos/: index.tsx  schema.ts
frontend/src/features/todos/api/: todos.ts
frontend/src/features/todos/components/: todo-list.tsx  todo-mutate-dialog.tsx
frontend/src/lib/: graphql-client.ts  handle-server-error.ts
frontend/src/stores/: auth-store.ts
migrations/: 20260408141012_add_todo_table.sql  20260408141031_add_note_field.sql  atlas.sum
scripts/dev-proxy/: generate-haproxy-config.sh  hosts.sh  setup-no-sudo.sh  start.sh
tests/: run.sh  variables.env
tests/01_todos/: 01_create_todo.hurl  02_read_todo.hurl  03_update_todo.hurl  04_delete_todo.hurl  05_validation.hurl
tests/02_graphql/: 01_create_todo.hurl  02_read_todo.hurl  03_update_todo.hurl  04_delete_todo.hurl  05_validation.hurl  06_todo_tags.hurl
web/: Cargo.toml  README.md
web/src/: error.rs  lib.rs  main.rs  routes.rs  state.rs
web/src/controllers/: todo.rs
web/src/graphql/: mutation.rs  query.rs  schema.rs  types.rs
web/src/test_helpers/: mod.rs
web/tests/api/: main.rs  todo_test.rs
