[workspace]
members = [
    "packages/cli",
    "packages/config",
    "packages/db",
    "packages/db_queries",
    "packages/jwt_jsonwebtoken",
    "packages/jwt_port",
    "packages/refresh_token_port",
    "packages/redis",
    "packages/web",
    "packages/macros",
]
resolver = "2"
default-members = ["packages/web"]
