[package]
name = "todoapp_graphql-db"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# examples in docs don't run without a running database, etc.
doctest = false

[features]
test-helpers = ["dep:fake", "dep:rand", "dep:regex", "dep:sqlx"]

[dependencies]
anyhow = "1.0"
fake = { version = "4.0", features = ["derive"], optional = true }
todoapp_graphql-config = { path = "../config" }
todoapp_graphql-db-queries = { path = "../db_queries" }
rand = { version = "0.10", optional = true }
regex = { version = "1.10", optional = true }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "uuid",
    "migrate",
    "chrono",
], optional = true }
thiserror = "2.0"
uuid = { version = "1.5", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
