[package]
name = "todoapp_graphql-db"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# examples in docs don't run without a running database, etc.
doctest = false

[dependencies]
anyhow = "1.0"
todoapp_graphql-config = { path = "../config" }
todoapp_graphql-db-queries = { path = "../db_queries" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
uuid = { version = "1.5", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
chrono = { version = "0.4.44", features = ["serde"] }
