[package]
name = "todoapp_graphql-web"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
# examples in docs don't run without a running database, etc.
doctest = false

[features]
test-helpers = [
    "dep:serde_json",
    "dep:tower",
    "dep:hyper",
    "dep:todoapp_graphql-macros",
]

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
todoapp_graphql-config = { path = "../config" }
todoapp_graphql-db = { path = "../db" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.34", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-panic = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "registry",
    "fmt",
] }
uuid = { version = "1.6", features = ["serde"] }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"
tower = { version = "0.5", features = ["util"], optional = true }
hyper = { version = "1.0", features = ["full"], optional = true }
validator = "0.20"
todoapp_graphql-macros = { path = "../macros", optional = true }
async-graphql = { version = "7.2.1", features = ["chrono", "uuid"] }
async-graphql-axum = "7.2.1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
fake = "4.0"
googletest = "0.14"
todoapp_graphql-db = { path = "../db", features = ["test-helpers"] }
todoapp_graphql-web = { path = ".", features = ["test-helpers"] }
