[package]
name = "todoapp_graphql-web"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
# examples in docs don't run without a running database, etc.
doctest = false

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
todoapp_graphql-config = { path = "../config" }
todoapp_graphql-db = { path = "../db" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.34", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-panic = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "registry",
    "fmt",
] }
uuid = { version = "1.6", features = ["serde"] }
thiserror = "2.0"
validator = "0.20"
async-graphql = { version = "7.2.1", features = ["chrono", "uuid"] }
async-graphql-axum = "7.2.1"
chrono = { version = "0.4", features = ["serde"] }
